Main changes done

--- a/index.html
+++ b/index.html
@@ -45,12 +45,20 @@
 
         <ul class="contacts-header list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="contacts-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -162,6 +170,58 @@
               <div class="section-team-description">
                 <h3 class="section-title-team">Игорь Демьяненко</h3>
                 <p class="section-text-team" lang="en">Product Designer</p>
+
+                <!-- Ссылки на соц. сети -->
+                <ul class="social-icons">
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -175,6 +235,58 @@
               <div class="section-team-description">
                 <h3 class="section-title-team">Ольга Репина</h3>
                 <p class="section-text-team" lang="en">Frontend Developer</p>
+
+                <!-- Ссылки на соц. сети -->
+                <ul class="social-icons">
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -188,6 +300,58 @@
               <div class="section-team-description">
                 <h3 class="section-title-team">Николай Тарасов</h3>
                 <p class="section-text-team" lang="en">Marketing</p>
+
+                <!-- Ссылки на соц. сети -->
+                <ul class="social-icons">
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -201,7 +365,145 @@
               <div class="section-team-description">
                 <h3 class="section-title-team">Михаил Ермаков</h3>
                 <p class="section-text-team" lang="en">UI Designer</p>
+
+                <!-- Ссылки на соц. сети -->
+                <ul class="social-icons">
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a
+                      href=""
+                      class="social-icons-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icons-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Постоянные клиенты -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title-main">Постоянные клиенты</h2>
+          <ul class="list clients">
+            <li class="client-card">
+              <a
+                href=""
+                class="client-card-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./images/icons.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-card">
+              <a
+                href=""
+                class="client-card-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./images/icons.svg#icon-group2"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-card">
+              <a
+                href=""
+                class="client-card-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./images/icons.svg#icon-group3"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-card">
+              <a
+                href=""
+                class="client-card-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./images/icons.svg#icon-group4"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-card">
+              <a
+                href=""
+                class="client-card-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./images/icons.svg#icon-group5"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-card">
+              <a
+                href=""
+                class="client-card-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./images/icons.svg#icon-group6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -236,6 +538,60 @@
               <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
             </li>
           </ul>
+
+          <!-- Ссылки на соц. сети -->
+          <div class="container">
+            <ul class="social-icons-footer list">
+              <li class="social-icons-item-footer">
+                <a
+                  href=""
+                  class="social-icons-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="social-icons-svg-footer">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icons-item">
+                <a
+                  href=""
+                  class="social-icons-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icons-item">
+                <a
+                  href=""
+                  class="social-icons-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icons-item">
+                <a
+                  href=""
+                  class="social-icons-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </address>
       </div>
     </footer>
