--- a/index.html
+++ b/index.html
@@ -541,15 +541,16 @@
 
           <!-- Ссылки на соц. сети -->
           <div class="container">
+            <h3 class="section-title-footer">присоединяйтесь</h3>
             <ul class="social-icons-footer list">
-              <li class="social-icons-item-footer">
+              <li class="social-icons-item">
                 <a
                   href=""
                   class="social-icons-link"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
-                  <svg class="social-icons-svg-footer">
+                  <svg class="social-icons-svg">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
