--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
 
           <ul class="list benefits">
             <li class="item">
+              <div class="thumb-benefits">
+                <svg class="benefits-icons-svg">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-title-benefits">Внимание к деталям</h3>
               <p class="section-text-benefits">
                 Идейные соображения, а также начало повседневной работы по
@@ -92,6 +97,11 @@
             </li>
 
             <li class="item">
+              <div class="thumb-benefits">
+                <svg class="benefits-icons-svg">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-title-benefits">Пунктуальность</h3>
               <p class="section-text-benefits">
                 Задача организации, в особенности же рамки и место обучения
@@ -100,6 +110,11 @@
             </li>
 
             <li class="item">
+              <div class="thumb-benefits">
+                <svg class="benefits-icons-svg">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-title-benefits">Планирование</h3>
               <p class="section-text-benefits">
                 Равным образом консультация с широким активом в значительной
@@ -108,6 +123,11 @@
             </li>
 
             <li class="item">
+              <div class="thumb-benefits">
+                <svg class="benefits-icons-svg">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-title-benefits">Современные технологии</h3>
               <p class="section-text-benefits">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -176,6 +196,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Инстаграм"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -188,6 +209,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Твиттер"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -200,6 +222,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Фейсбук"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -212,6 +235,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Линкедин"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -241,6 +265,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Инстаграм"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -253,6 +278,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Твиттер"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -265,6 +291,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Фейсбук"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -277,6 +304,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Линкедин"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -306,6 +334,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Инстаграм"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -318,6 +347,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Твиттер"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -330,6 +360,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Фейсбук"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -342,6 +373,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Линкедин"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -371,6 +403,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Инстаграм"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -383,6 +416,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Твиттер"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -395,6 +429,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Фейсбук"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -407,6 +442,7 @@
                   <li class="social-icons-item">
                     <a
                       href=""
+                      aria-label="Линкедин"
                       class="social-icons-link"
                       target="_blank"
                       rel="noopener noreferrer"
@@ -431,6 +467,7 @@
             <li class="client-card">
               <a
                 href=""
+                aria-label="Ya & Co"
                 class="client-card-link link"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -444,6 +481,7 @@
             <li class="client-card">
               <a
                 href=""
+                aria-label="Company Tagline Here"
                 class="client-card-link link"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -457,6 +495,7 @@
             <li class="client-card">
               <a
                 href=""
+                aria-label="Company"
                 class="client-card-link link"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -470,6 +509,7 @@
             <li class="client-card">
               <a
                 href=""
+                aria-label="Foster Peters"
                 class="client-card-link link"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -483,6 +523,7 @@
             <li class="client-card">
               <a
                 href=""
+                aria-label="Brand"
                 class="client-card-link link"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -496,6 +537,7 @@
             <li class="client-card">
               <a
                 href=""
+                aria-label="Company Tag Line"
                 class="client-card-link link"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -512,7 +554,7 @@
 
     <!-- Футер -->
     <footer class="footer-links">
-      <div class="container">
+      <div class="container address">
         <div class="full-logo-footer">
           <a href="./index.html" lang="en" class="logo-accent link"
             >Web<span class="logo-footer link">Studio</span></a
@@ -538,62 +580,66 @@
               <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
             </li>
           </ul>
-
-          <!-- Ссылки на соц. сети -->
-          <div class="container">
-            <h3 class="section-title-footer">присоединяйтесь</h3>
-            <ul class="social-icons-footer list">
-              <li class="social-icons-item">
-                <a
-                  href=""
-                  class="social-icons-link"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <svg class="social-icons-svg">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-icons-item">
-                <a
-                  href=""
-                  class="social-icons-link"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <svg class="social-icons-svg">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-icons-item">
-                <a
-                  href=""
-                  class="social-icons-link"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <svg class="social-icons-svg">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-icons-item">
-                <a
-                  href=""
-                  class="social-icons-link"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <svg class="social-icons-svg">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
         </address>
+      </div>
+
+      <!-- Ссылки на соц. сети -->
+      <div class="container social-media-footer">
+        <h3 class="section-title-footer">присоединяйтесь</h3>
+        <ul class="social-icons-footer list">
+          <li class="social-icons-item">
+            <a
+              href=""
+              aria-label="Инстаграм"
+              class="social-icons-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="footer social-icons-svg">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a
+              href=""
+              aria-label="Твиттер"
+              class="social-icons-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="social-icons-svg">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a
+              href=""
+              aria-label="Фейсбук"
+              class="social-icons-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="social-icons-svg">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a
+              href=""
+              aria-label="Линкедин"
+              class="social-icons-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="social-icons-svg">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
