--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
 
     <!-- Футер -->
     <footer class="footer-links">
-      <div class="container">
+      <div class="container address">
         <div class="full-logo-footer">
           <a href="./index.html" lang="en" class="logo-accent link"
             >Web<span class="logo-footer link">Studio</span></a
@@ -237,7 +237,7 @@
         </div>
         <address>
           <ul class="list">
-            <li>
+            <li class="footer-address">
               <a
                 class="map-link link"
                 href="https://goo.gl/maps/onrn5g9ZaPqnStBHA"
@@ -256,6 +256,65 @@
             </li>
           </ul>
         </address>
+      </div>
+
+      <!-- Ссылки на соц. сети -->
+      <div class="container social-media-footer">
+        <h3 class="section-title-footer">присоединяйтесь</h3>
+        <ul class="social-icons-footer list">
+          <li class="social-icons-item">
+            <a
+              href=""
+              aria-label="Инстаграм"
+              class="social-icons-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="footer social-icons-svg">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a
+              href=""
+              aria-label="Твиттер"
+              class="social-icons-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="social-icons-svg">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a
+              href=""
+              aria-label="Фейсбук"
+              class="social-icons-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="social-icons-svg">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a
+              href=""
+              aria-label="Линкедин"
+              class="social-icons-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="social-icons-svg">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
