Hero width and footer margins corrected

--- a/portfolio.html
+++ b/portfolio.html
@@ -229,92 +229,94 @@
 
     <!-- Футер -->
     <footer class="footer-links">
-      <div class="container address">
-        <div class="full-logo-footer">
-          <a href="./index.html" lang="en" class="logo-accent link"
-            >Web<span class="logo-footer link">Studio</span></a
-          >
+      <div class="container">
+        <div class="address">
+          <div class="full-logo-footer">
+            <a href="./index.html" lang="en" class="logo-accent link"
+              >Web<span class="logo-footer link">Studio</span></a
+            >
+          </div>
+          <address>
+            <ul class="list">
+              <li class="footer-address">
+                <a
+                  class="map-link link"
+                  href="https://goo.gl/maps/onrn5g9ZaPqnStBHA"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="contacts-footer">
+                <a href="mailto:info@example.com" class="link"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="contacts-footer">
+                <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
         </div>
-        <address>
-          <ul class="list">
-            <li class="footer-address">
+
+        <!-- Ссылки на соц. сети -->
+        <div class="social-media-footer">
+          <h3 class="section-title-footer">присоединяйтесь</h3>
+          <ul class="social-icons-footer list">
+            <li class="social-icons-item">
               <a
-                class="map-link link"
-                href="https://goo.gl/maps/onrn5g9ZaPqnStBHA"
+                href=""
+                aria-label="Инстаграм"
+                class="social-icons-link"
                 target="_blank"
                 rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
               >
+                <svg class="footer social-icons-svg">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="contacts-footer">
-              <a href="mailto:info@example.com" class="link"
-                >info@example.com</a
+            <li class="social-icons-item">
+              <a
+                href=""
+                aria-label="Твиттер"
+                class="social-icons-link"
+                target="_blank"
+                rel="noopener noreferrer"
               >
+                <svg class="social-icons-svg">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="contacts-footer">
-              <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+            <li class="social-icons-item">
+              <a
+                href=""
+                aria-label="Фейсбук"
+                class="social-icons-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icons-svg">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a
+                href=""
+                aria-label="Линкедин"
+                class="social-icons-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icons-svg">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-      </div>
-
-      <!-- Ссылки на соц. сети -->
-      <div class="container social-media-footer">
-        <h3 class="section-title-footer">присоединяйтесь</h3>
-        <ul class="social-icons-footer list">
-          <li class="social-icons-item">
-            <a
-              href=""
-              aria-label="Инстаграм"
-              class="social-icons-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="footer social-icons-svg">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icons-item">
-            <a
-              href=""
-              aria-label="Твиттер"
-              class="social-icons-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="social-icons-svg">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icons-item">
-            <a
-              href=""
-              aria-label="Фейсбук"
-              class="social-icons-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="social-icons-svg">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icons-item">
-            <a
-              href=""
-              aria-label="Линкедин"
-              class="social-icons-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="social-icons-svg">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
     </footer>
   </body>
